--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -18,9 +18,9 @@
 
 \usetheme{Warsaw} % With horizontal table of content on top
 
-\usepackage{pgfpages}
-\setbeameroption{show notes}
-\setbeameroption{show notes on second screen=right}
+%\usepackage{pgfpages}
+%\setbeameroption{show notes}
+%\setbeameroption{show notes on second screen=right}
 \setbeamertemplate{navigation symbols}
 {%
 \vbox{%
@@ -51,10 +51,11 @@
 
 \begin{frame}
     \titlepage
-    \note{Present yourself}\\
+    \note{Present yourself}
     \note{Present your supervisor}
 \end{frame}
 
+\input{./tex/Notes}
 \input{./tex/Introduction}
 
 \begin{frame}[allowframebreaks]
