--- a/Presentation/tex/Introduction.tex
+++ b/Presentation/tex/Introduction.tex
@@ -5,8 +5,7 @@
     \frametitle{Articles}
     There is a sequence of FAB-MAP related articles:
     \begin{itemize}
-        \item Fab-map: Probabilistic localization and mapping in the space of
-appearance\cite{fabmap2008} ;
+        \item Fab-map: Probabilistic localization and mapping in the space of appearance\cite{fabmap2008} ;
         \item Accelerating fab-map with concentration inequalities\cite{accelerating} ;
         \item Appearance-only slam at large scale with fab-map 2.0\cite{fabmap2011} ;
         \item Openfabmap : An open source toolbox for appearance-based loop closure detection\cite{openfabmap} ;
@@ -17,9 +16,11 @@ appearance\cite{fabmap2008} ;
 \subsection{What is FAB-MAP ?}
 \begin{frame}
     \frametitle{What is FAB-MAP ?}
+    This paper describes a probabilistic approach to the problem of recog- nizing places based on their appearance. The system we present is not limited to localization, but can determine that a new observa- tion comes from a previously unseen place, and so augment its map. Effectively this is a SLAM system in the space of appearance.
     \begin{itemize}
         \item Place recognition
         \item based on images
         \item map large outdoor environmenent(60+km)
     \end{itemize}
 \end{frame}
+
