working on quick review of fabmap 2.0 ; ;

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -1,4 +1,13 @@
-@article{fabmap2008,
+@inproceedings{fabmab2008a,
+  title={Accelerated appearance-only SLAM},
+  author={Cummins, Mark and Newman, Paul},
+  booktitle={Robotics and automation, 2008. ICRA 2008. IEEE international conference on},
+  pages={1828--1833},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{fabmap2008b,
     title={FAB-MAP: Probabilistic localization and mapping in the space of appearance},
     author={Cummins, Mark and Newman, Paul},
     journal={The International Journal of Robotics Research},
@@ -7,6 +16,15 @@
     pages={647--665},
     year={2008},
     publisher={SAGE Publications}
+}
+
+@inproceedings{fabmap2009,
+  title={Highly scalable appearance-only SLAM-FAB-MAP 2.0.},
+  author={Cummins, Mark and Newman, Paul},
+  booktitle={Robotics: Science and Systems},
+  volume={5},
+  year={2009},
+  organization={Seattle, USA}
 }
 
 @article{fabmap2011,
