--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -41,7 +41,7 @@
 \setbeamertemplate{frametitle continuation}[from second]
 
 \title[FAB-MAP]{FAB-MAP: Probabilistic Localization and Mapping in the Space of Appearance}
-\subtitle{Mark Cummins and Paul Newman}
+\subtitle{Mark Cummins and Paul Newman (IJRR 2008)}
 \author{Sébastien Michaud}
 \institute{Laval University}
 \date{September 2015}
@@ -57,6 +57,9 @@
 
 \input{./tex/Notes}
 \input{./tex/Introduction}
+%\input{./tex/}
+\input{./tex/Results}
+\input{./tex/Conclusion}
 
 \begin{frame}[allowframebreaks]
     \frametitle{References}
