finished first reading, starting the real presentation

--- a/Presentation/tex/Conclusion.tex
+++ b/Presentation/tex/Conclusion.tex
@@ -1,10 +1,31 @@
 \section{Conclusion}
 
-\subsection{Conclusion}
-
-\begin{frame}
-    \frametitle{Conclusion}
+\subsection{FABMAP 1.0}
+\begin{frame}{Conclusion (FABMAP 1.0)}
     \begin{itemize}
-        \item Poop
+        \item Probabilistic framework for place recognition
+    \end{itemize}
+\end{frame}
+
+\subsection{FABMAP 2.0}
+\begin{frame}{Conclusion (FABMAP 2.0)}
+    \begin{itemize}
+        \item Improved version 1.0 for \textbf{scalability}
+        \item Adapted for \textbf{inverted index}
+        \item Added \textbf{geometric verification}
+        \item Changed \textbf{k-means} (approximated, initialization, merged)
+        \item Can only use \textbf{single observation}
+        \item Validated on a \textbf{1000 km dataset}
+    \end{itemize}
+\end{frame}
+
+\subsection{OpenFABMAP}
+\begin{frame}{Conclusion (OpenFABMAP)}
+    \begin{itemize}
+        \item Implementation differ from FABMAP
+        \item Customizable (mainly useful for codebook)
+        \item No implementation for FABMAP 2.0
+        \item OpenCV, ROS
+        \item Opinion from my test : nice, but really aim at 100\% precision and scalability
     \end{itemize}
 \end{frame}
