--- a/Presentation/tex/Introduction.tex
+++ b/Presentation/tex/Introduction.tex
@@ -1,8 +1,7 @@
 \section{Introduction}
 
 \subsection{Articles}
-\begin{frame}
-    \frametitle{Articles}
+\begin{frame}{Articles}
     There is a sequence of FAB-MAP related articles:
     \begin{itemize}
         \item Fab-map: Probabilistic localization and mapping in the space of appearance\cite{fabmap2008} ;
@@ -14,8 +13,7 @@
 \end{frame}
 
 \subsection{What is FAB-MAP ?}
-\begin{frame}
-    \frametitle{What is FAB-MAP ?}
+\begin{frame}{What is FAB-MAP ?}
     This paper describes a probabilistic approach to the problem of recog- nizing places based on their appearance. The system we present is not limited to localization, but can determine that a new observa- tion comes from a previously unseen place, and so augment its map. Effectively this is a SLAM system in the space of appearance.
     \begin{itemize}
         \item Place recognition
