--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -1,4 +1,4 @@
-\documentclass[[aspectratio=169,14pt,t]{beamer}
+\documentclass[[aspectratio=169,12pt]{beamer}
 
 \usepackage[utf8]{inputenc}
 \usepackage[french]{babel}
@@ -18,9 +18,9 @@
 
 \usetheme{Warsaw} % With horizontal table of content on top
 
-%\usepackage{pgfpages}
-%\setbeameroption{show notes}
-%\setbeameroption{show notes on second screen=right}
+\usepackage{pgfpages}
+\setbeameroption{show notes}
+\setbeameroption{show notes on second screen=right}
 \setbeamertemplate{navigation symbols}
 {%
 \vbox{%
@@ -44,21 +44,23 @@
 \subtitle{Mark Cummins and Paul Newman (IJRR 2008)}
 \author{Sébastien Michaud}
 \institute{Laval University}
-\date{September 2015}
+\date{October 2015}
 
 
 \begin{document}
 
 \begin{frame}
     \titlepage
-    \note{Present yourself}
-    \note{Present your supervisor}
+    \note[item]{Present yourself}
+    \note[item]{Present your supervisor}
+    \note[item]{FABMAP : 2008 International Journal of Robotics Research}
 \end{frame}
 
-\input{./tex/Notes}
+%\input{./tex/Notes}
 \input{./tex/Introduction}
-%\input{./tex/}
-\input{./tex/Results}
+\input{./tex/Fabmap1.tex}
+\input{./tex/Fabmap2.tex}
+\input{./tex/OpenFabmap.tex}
 \input{./tex/Conclusion}
 
 \begin{frame}[allowframebreaks]
