--- a/Presentation/tex/Conclusion.tex
+++ b/Presentation/tex/Conclusion.tex
@@ -23,7 +23,7 @@
 \begin{frame}{Conclusion (OpenFABMAP)}
     \begin{itemize}
         \item Implementation differ from FABMAP
-        \item Customizable (mainly useful for codebook)
+        \item Customizable (especially useful for codebook)
         \item No implementation for FABMAP 2.0
         \item OpenCV, ROS
         \item Opinion from my test : nice, but really aim at 100\% precision and scalability
