--- a/Presentation/tex/OpenFabmap.tex
+++ b/Presentation/tex/OpenFabmap.tex
@@ -6,3 +6,25 @@
        \item test
    \end{enumerate} 
 \end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+    \frametitle{OpenFABMAP}
+    \begin{itemize}
+        \item Quick note: Let them know that there is differences between FABMAP and OpenFABMAP implementation (binary bow, size of descriptors, probabilistic equations...)
+        \item There is fabmap binaries available
+        \item Codebook and CLT generation
+        \item Can change keypoints detector and descriptors (STAR best for them)
+        \item Does not have implementations 2.0
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{OpenFABMAP}
+    \begin{itemize}
+        \item Tested on 10 dataset (single cam, omnidirectional)
+        \item At best reported 16\% recall for 100\% precision (show figure)
+        \item Show little demo with my dataset
+    \end{itemize}
+\end{frame}
