small changes for home :)

--- a/Presentation/tex/Fabmap1.tex
+++ b/Presentation/tex/Fabmap1.tex
@@ -3,19 +3,17 @@
 \subsection{Introduction}
 \begin{frame}{Let's talk about that article}
    \begin{enumerate}
-       \item Fast Appearance-Based Mapping (FABMAP)
        \item But do they achieve that ???
+       \note[item]{Just for your information, this is what it stands for}
        \note[item]{Already introduced the main idea that it is place recognition + detect new places = SLAM}
    \end{enumerate} 
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}
     \frametitle{FABMAP 2008}
     \begin{itemize}
-        \item Fast Appearance-Based Mapping (FAB-MAP)
-        \item What/Why place recognition (SLAM)
-        \item Quick overview of SLAM (video of SLAM in action, figure show loop closure)
         \item 100\% precision, because false positive break the shit + update appearance model with new sample of known place !
         \item What is perceptual aliasing (with figure)
         \item CLT for visual words co-occurence
