--- a/Presentation/tex/Introduction.tex
+++ b/Presentation/tex/Introduction.tex
@@ -18,7 +18,7 @@
 \end{frame}
 
 \subsection{FABMAP}
-\begin{frame}{What is FABMAP ?}
+\begin{frame}{Fast Appearance-Based Mapping (FABMAP)}
     \begin{quotation}
         This paper describes a \textbf{probabilistic approach} to the problem of \textbf{recognizing places} based on their \textbf{appearance}. The system we present is not limited to localization, but \textbf{can determine that a new observation comes from a previously unseen place}, and so augment its map. Effectively this is a \textbf{SLAM} system in the space of appearance.~\cite{fabmap2008b}
     \end{quotation}
@@ -45,7 +45,7 @@
         \href{https://www.youtube.com/watch?v=y7OnimZRj2w}{\includegraphics[width=1.0\textwidth]{./media/loop_closure.png}}
     \end{center}
     \note[item]{SLAM demo... Find points, update map...}
-    \note[item]{Place recognition}
+    \note[item]{Place recognition (what and why)}
     \note[item]{Loop closure}
     \note[item]{How is it related to FABMAP: topological loop closure}
 \end{frame}
