added - to all fabmap

--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -57,7 +57,7 @@
     \titlepage
     \note[item]{Present yourself}
     \note[item]{Present your supervisor}
-    \note[item]{FABMAP : 2008 International Journal of Robotics Research}
+    \note[item]{FAB-MAP : 2008 International Journal of Robotics Research}
 \end{frame}
 
 \input{./tex/Introduction}
