--- a/Presentation/tex/Conclusion.tex
+++ b/Presentation/tex/Conclusion.tex
@@ -1,14 +1,14 @@
 \section{Conclusion}
 
-\subsection{FABMAP 1.0}
-\begin{frame}{Conclusion (FABMAP 1.0)}
+\subsection{FAB-MAP 1.0}
+\begin{frame}{Conclusion (FAB-MAP 1.0)}
     \begin{itemize}
         \item Probabilistic framework for place recognition
     \end{itemize}
 \end{frame}
 
-\subsection{FABMAP 2.0}
-\begin{frame}{Conclusion (FABMAP 2.0)}
+\subsection{FAB-MAP 2.0}
+\begin{frame}{Conclusion (FAB-MAP 2.0)}
     \begin{itemize}
         \item Improved version 1.0 for \textbf{scalability}
         \item Adapted for \textbf{inverted index}
@@ -22,9 +22,9 @@
 \subsection{OpenFABMAP}
 \begin{frame}{Conclusion (OpenFABMAP)}
     \begin{itemize}
-        \item Implementation differ from FABMAP
+        \item Implementation differ from FAB-MAP
         \item Customizable (especially useful for codebook)
-        \item No implementation for FABMAP 2.0
+        \item No implementation for FAB-MAP 2.0
         \item OpenCV, ROS
         \item Opinion from my test : nice, but really aim at 100\% precision and scalability
     \end{itemize}
