--- a/Presentation/tex/Fabmap1.tex
+++ b/Presentation/tex/Fabmap1.tex
@@ -1,4 +1,4 @@
-\section{FABMAP 1.0}
+\section{FAB-MAP 1.0}
 
 \subsection{Introduction}
 \begin{frame}{Let's talk about that article}
@@ -12,7 +12,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
-    \frametitle{FABMAP 2008}
+    \frametitle{FAB-MAP 2008}
     \begin{itemize}
         \item 100\% precision, because false positive break the shit + update appearance model with new sample of known place !
         \item What is perceptual aliasing (with figure)
