--- a/Presentation/tex/OpenFabmap.tex
+++ b/Presentation/tex/OpenFabmap.tex
@@ -12,7 +12,7 @@
 \begin{frame}
     \frametitle{OpenFABMAP}
     \begin{itemize}
-        \item Quick note: Let them know that there is differences between FABMAP and OpenFABMAP implementation (binary bow, size of descriptors, probabilistic equations...)
+        \item Quick note: Let them know that there is differences between FAB-MAP and OpenFABMAP implementation (binary bow, size of descriptors, probabilistic equations...)
         \item There is fabmap binaries available
         \item Codebook and CLT generation
         \item Can change keypoints detector and descriptors (STAR best for them)
