--- a/Presentation/tex/Introduction.tex
+++ b/Presentation/tex/Introduction.tex
@@ -11,14 +11,14 @@
         \item \textbf{(2011) Appearance-only slam at large scale with fab-map~2.0}~\cite{fabmap2011} ;
         \item \textbf{(2012) Openfabmap : An open source toolbox for appearance-based loop closure detection}~\cite{openfabmap}.
     \end{itemize}
-    \note[item]{Context ... Long sequences of FABMAP related articles...}
+    \note[item]{Context ... Long sequences of FAB-MAP related articles...}
     \note[item]{Article getting OLD -- 2008, but...}
     \note[item]{For 1.0 and 2.0 Conference version first, then version journal}
     \note[item]{Non exaustive list... I might forget some}
 \end{frame}
 
-\subsection{FABMAP}
-\begin{frame}{Fast Appearance-Based Mapping (FABMAP)}
+\subsection{FAB-MAP}
+\begin{frame}{Fast Appearance-Based Mapping (FAB-MAP)}
     \begin{quotation}
         This paper describes a \textbf{probabilistic approach} to the problem of \textbf{recognizing places} based on their \textbf{appearance}. The system we present is not limited to localization, but \textbf{can determine that a new observation comes from a previously unseen place}, and so augment its map. Effectively this is a \textbf{SLAM} system in the space of appearance.~\cite{fabmap2008b}
     \end{quotation}
@@ -47,5 +47,5 @@
     \note[item]{SLAM demo... Find points, update map...}
     \note[item]{Place recognition (what and why)}
     \note[item]{Loop closure}
-    \note[item]{How is it related to FABMAP: topological loop closure}
+    \note[item]{How is it related to FAB-MAP: topological loop closure}
 \end{frame}
