working on 2.0 again

--- a/Presentation/tex/Fabmap1.tex
+++ b/Presentation/tex/Fabmap1.tex
@@ -2,11 +2,11 @@
 
 \subsection{Introduction}
 \begin{frame}{FAB-MAP 1.0}
-    \begin{enumerate}
+    \begin{itemize}
         \item Based on bag of words (BoW)
         \item 100\% precision, because false positive break the shit + update appearance model with new sample of known place !
         \item CLT for visual words co-occurence
-    \end{enumerate}
+    \end{itemize}
     \note[item]{}
 \end{frame}
 
